--- a/CWLibrary/CWLibrary.csproj
+++ b/CWLibrary/CWLibrary.csproj
@@ -11,7 +11,7 @@
     <RootNamespace>CWLibrary</RootNamespace>
     <AssemblyName>CWLibrary</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <TargetFrameworkProfile>Profile4</TargetFrameworkProfile>
+    <TargetFrameworkProfile>Profile2</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
   </PropertyGroup>
@@ -42,6 +42,7 @@
     <Compile Include="HeaderChunk.cs" />
     <Compile Include="TextToMorse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TextToMorseSysbols.cs" />
     <Compile Include="WaveChunk.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
